--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,6 +25,10 @@
   <div class="" style="margin-top: 180px;">
     <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a>
   </div>	
+  
+    <div class="" style="margin-top: 180px;">
+    <a th:href="@{/bar-chart}" type="button" class="btn btn-secondary">Barres graphique</a>
+  </div>
 
 
 
