--- a/src/main/resources/templates/barchart.html
+++ b/src/main/resources/templates/barchart.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
         <link th:href="@{css/footer.css}" rel="stylesheet" />
+                <link th:href="@{css/barchart.css}" rel="stylesheet" />
+        
     
 </head>
 <body>
@@ -21,10 +23,15 @@
 
 
 <div class="container" style="margin-top: 120px;">
-		<h2 align="center">Data Graph</h2>
-
-		<div id="bargraph"
-			style="width: 550px; height: 400px; margin: 0 auto"></div>
+		<figure class="highcharts-figure">
+  <div id="column-chart"></div>
+<!--   <p class="highcharts-description"> -->
+<!--     A basic column chart compares rainfall values between four cities. -->
+<!--     Tokyo has the overall highest amount of rainfall, followed by New York. -->
+<!--     The chart is making use of the axis crosshair feature, to highlight -->
+<!--     months as they are hovered over. -->
+<!--   </p> -->
+</figure>
 	</div>
 
 
@@ -35,7 +42,9 @@
 				<div th:replace="_nav-components :: footer">...</div>
 
 <script src="https://code.highcharts.com/highcharts.js"></script>
-	<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
 		<script type="text/javascript" th:src="@{/js/style.js}"></script>
@@ -51,48 +60,94 @@
 
 
 	<script th:inline="javascript">
-    $(function(){
-    Highcharts.chart('bargraph', {
-        chart: {
-            type: 'column'
-        },
-        title: {
-            text: 'Organization'
-        },
-        subtitle: {
-            text: 'Details'
-        },
-        xAxis: {
-            categories: [[${keySet}]],
-            crosshair: true
-        },
-        yAxis: {
-            min: 0,
-            max:[[${size}]],
-            title: {
-                text: 'Classement'
-            }
-        },
-        tooltip: {
-            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
-            pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
-            '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
-            footerFormat: '</table>',
-            shared: true,
-            useHTML: true
-        },
-        plotOptions: {
-            column: {
-                pointPadding: 0.2,
-                borderWidth: 0
-            }
-        },
-        series: [{
-            name: 'Numéro',
-            data: [[${values}]]
-        }]
-      });
-    });
+	
+	Highcharts.chart('column-chart', {
+		  chart: {
+		    type: 'column'
+		  },
+		  title: {
+		    text: 'Analyse premiers du prono à la place'
+		  },
+		  subtitle: {
+		    text: 'Source: tayinfos.com'
+		  },
+		  xAxis: {
+			  categories: [[${categorie}]],
+		    crosshair: true
+		  },
+		  yAxis: {
+		    min: 0,
+		    title: {
+		      text: 'Rainfall (%)'
+		    }
+		  },
+		  tooltip: {
+		    headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+		    pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+		      '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+		    footerFormat: '</table>',
+		    shared: true,
+		    useHTML: true
+		  },
+		  plotOptions: {
+		    column: {
+		      pointPadding: 0.2,
+		      borderWidth: 0
+		    }
+		  },
+		  series: [{
+		    name: 'Gagnants',
+		    data: [[${series1}]]
+
+		  }, {
+		    name: 'Perdants',
+		    data: [[${series2}]]
+
+		  }]
+		});
+	
+//     $(function(){
+//     Highcharts.chart('bargraph', {
+//         chart: {
+//             type: 'column'
+//         },
+//         title: {
+//             text: 'Organization'
+//         },
+//         subtitle: {
+//             text: 'Details'
+//         },
+//         xAxis: {
+//             categories: [[${keySet}]],
+//             crosshair: true
+//         },
+//         yAxis: {
+//             min: 0,
+//             max:[[${size}]],
+//             title: {
+//                 text: 'Classement'
+//             }
+//         },
+//         tooltip: {
+//             headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+//             pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+//             '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
+//             footerFormat: '</table>',
+//             shared: true,
+//             useHTML: true
+//         },
+//         plotOptions: {
+//             column: {
+//                 pointPadding: 0.2,
+//                 borderWidth: 0
+//             }
+//         },
+//         series: [{
+//             name: 'Numéro',
+//             data: [[${values}]]
+//         }]
+//       });
+//     });
 </script>
 </body>
 </html>
