--- a/src/main/resources/templates/place-table.html
+++ b/src/main/resources/templates/place-table.html
@@ -10,11 +10,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
         <link th:href="@{css/footer.css}" rel="stylesheet" />
+            <link th:href="@{css/barchart.css}" rel="stylesheet" />
+        
     
 </head>
 <body>
         		<div th:replace="_nav-components :: nav">...</div>
         		
+        		
+        		<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6" style="overflow-y: scroll; overflow-x: hidden;">
+		        		
       <div style="border: 1px solid black;" th:text="${'Joués: ' + numberofbets + '  -  Gains: ' + totalgains + '  -  Benef: ' + benef}">...</div>
             <div style="border: 1px solid black;" th:text="${'Bankroll initiale: ' + initialBankrollAmount + '  -  Bankroll actuelle: ' + newBankrollAmount + '  -  Benef: ' + bankrollBenef + ' - Multiplication capital: X' + cotecapital + ' - Minimum: ' + minimumBankrollAmount}">...</div>
       
@@ -44,10 +51,37 @@
     </tr>
   </tbody>
 </table>
+		</div>
+		<div class="col-md-6">
+		
+		<div class="container" style="margin-top: 120px;">
+		<figure class="highcharts-figure">
+  <div id="column-chart"></div>
+<!--   <p class="highcharts-description"> -->
+<!--     A basic column chart compares rainfall values between four cities. -->
+<!--     Tokyo has the overall highest amount of rainfall, followed by New York. -->
+<!--     The chart is making use of the axis crosshair feature, to highlight -->
+<!--     months as they are hovered over. -->
+<!--   </p> -->
+</figure>
+	</div>
+	
+		</div>
+	</div>
+</div>
+        		
+        		
+
+
+
 
 
 				<div th:replace="_nav-components :: footer">...</div>
 
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
 		<script type="text/javascript" th:src="@{/js/style.js}"></script>
@@ -55,6 +89,97 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+
+	<script th:inline="javascript">
+	
+	Highcharts.chart('column-chart', {
+		  chart: {
+		    type: 'column'
+		  },
+		  title: {
+		    text: 'Analyse premiers du prono à la place'
+		  },
+		  subtitle: {
+		    text: 'Source: tayinfos.com'
+		  },
+		  xAxis: {
+			  categories: [[${categorie}]],
+		    crosshair: true
+		  },
+		  yAxis: {
+		    min: 0,
+		    title: {
+		      text: '%'
+		    }
+		  },
+		  tooltip: {
+		    headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+		    pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+		      '<td style="padding:0"><b>{point.y:.1f} mm</b></td></tr>',
+		    footerFormat: '</table>',
+		    shared: true,
+		    useHTML: true
+		  },
+		  plotOptions: {
+		    column: {
+		      pointPadding: 0.2,
+		      borderWidth: 0
+		    }
+		  },
+		  series: [{
+		    name: 'Gagnants',
+		    data: [[${series1}]]
+
+		  }, {
+		    name: 'Perdants',
+		    data: [[${series2}]]
+
+		  }]
+		});
+	
+//     $(function(){
+//     Highcharts.chart('bargraph', {
+//         chart: {
+//             type: 'column'
+//         },
+//         title: {
+//             text: 'Organization'
+//         },
+//         subtitle: {
+//             text: 'Details'
+//         },
+//         xAxis: {
+//             categories: [[${keySet}]],
+//             crosshair: true
+//         },
+//         yAxis: {
+//             min: 0,
+//             max:[[${size}]],
+//             title: {
+//                 text: 'Classement'
+//             }
+//         },
+//         tooltip: {
+//             headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+//             pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+//             '<td style="padding:0"><b>{point.y:.1f} K</b></td></tr>',
+//             footerFormat: '</table>',
+//             shared: true,
+//             useHTML: true
+//         },
+//         plotOptions: {
+//             column: {
+//                 pointPadding: 0.2,
+//                 borderWidth: 0
+//             }
+//         },
+//         series: [{
+//             name: 'Numéro',
+//             data: [[${values}]]
+//         }]
+//       });
+//     });
+</script>
 
 </body>
 </html>
