--- a/src/main/resources/templates/place-table.html
+++ b/src/main/resources/templates/place-table.html
@@ -24,6 +24,7 @@
 		        		
       <div style="border: 1px solid black;" th:text="${'Joués: ' + numberofbets + '  -  Gains: ' + totalgains + '  -  Benef: ' + benef}">...</div>
             <div style="border: 1px solid black;" th:text="${'Bankroll initiale: ' + initialBankrollAmount + '  -  Bankroll actuelle: ' + newBankrollAmount + '  -  Benef: ' + bankrollBenef + ' - Multiplication capital: X' + cotecapital + ' - Minimum: ' + minimumBankrollAmount}">...</div>
+            <div style="border: 1px solid black;" th:text="${'Gagnés: ' + wonnumber + '  -  Perdus: ' + lostnumber}">...</div>
       
         		
 
