--- a/src/main/resources/templates/place-table.html
+++ b/src/main/resources/templates/place-table.html
@@ -4,8 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
 <!--     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link th:href="@{css/style.css}" rel="stylesheet" />
@@ -22,7 +23,8 @@
 	<div class="row">
 		<div class="col-md-6" style="overflow-y: scroll; overflow-x: hidden;">
 		        		
-      <div style="border: 1px solid black;" th:text="${'Joués: ' + numberofbets + '  -  Gains: ' + totalgains + '  -  Benef: ' + benef}">...</div>
+		    <div style="border: 1px solid black;" th:text="${'Date de début : ' + firstday + '  -  Date de fin : ' + lastday}">...</div>
+            <div style="border: 1px solid black;" th:text="${'Joués: ' + numberofbets + '  -  Gains: ' + totalgains + '  -  Benef: ' + benef + ' - Multiplication : ' + multiplication}">...</div>
             <div style="border: 1px solid black;" th:text="${'Bankroll initiale: ' + initialBankrollAmount + '  -  Bankroll actuelle: ' + newBankrollAmount + '  -  Benef: ' + bankrollBenef + ' - Multiplication capital: X' + cotecapital + ' - Minimum: ' + minimumBankrollAmount}">...</div>
             <div style="border: 1px solid black;" th:text="${'Gagnés: ' + wonnumber + '  -  Perdus: ' + lostnumber}">...</div>
       
@@ -53,6 +55,9 @@
   </tbody>
 </table>
 		</div>
+		
+		
+		
 		<div class="col-md-6">
 		
 		<div class="container" style="margin-top: 120px;">
@@ -75,9 +80,13 @@
 
 
 
+		<div th:replace="_components :: buttonup">...</div>
 
 
 				<div th:replace="_nav-components :: footer">...</div>
+				
+					<script src="https://unpkg.com/feather-icons"></script>
+				
 
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
