--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,8 +23,12 @@
 </div>        	
 
   <div class="" style="margin-top: 180px;">
-    <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a>
+    <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives simple placé</a>
   </div>	
+  
+   <div class="" style="margin-top: 180px;">
+    <a th:href="@{/archives-deux-sur-quatre}" type="button" class="btn btn-secondary">Archives 2sur4</a>
+  </div>
   
     <div class="" style="margin-top: 180px;">
     <a th:href="@{/bar-chart}" type="button" class="btn btn-secondary">Barres graphique</a>
