--- a/src/main/resources/templates/place-table.html
+++ b/src/main/resources/templates/place-table.html
@@ -63,12 +63,10 @@
 		<div class="container" style="margin-top: 120px;">
 		<figure class="highcharts-figure">
   <div id="column-chart"></div>
-<!--   <p class="highcharts-description"> -->
-<!--     A basic column chart compares rainfall values between four cities. -->
-<!--     Tokyo has the overall highest amount of rainfall, followed by New York. -->
-<!--     The chart is making use of the axis crosshair feature, to highlight -->
-<!--     months as they are hovered over. -->
-<!--   </p> -->
+  <p class="highcharts-description">Nombre total de paris : [[${totalnumber}]]</p>
+    <p class="highcharts-description text-success">Nombre de paris gagnants : [[${wonnumber}]]</p>
+    <p class="highcharts-description text-danger">Nombre de paris perdants : [[${lostnumber}]]</p>
+  
 </figure>
 	</div>
 	
