--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -82,7 +82,7 @@
       <h4 style="text-shadow: 3px 3px 4px #000000;">
         <a href="/" class="" style="text-align: center; font-weight: bold; font-style:oblique; color: white;">
 <!--            <img style="width: 55px; height: 60px; box-shadow: 4px 4px 8px #000000; border-style: solid; border-radius: 50%; border-color: gold;" th:src="@{/img/horsefire.jpg}" alt="logo" />  -->
-           <img style="width: 55px; height: 60px; box-shadow: 4px 4px 8px #000000; border-style: solid; border-radius: 50%; border-color: gold;" th:src="@{/img/star.jpg}" alt="logo" /> 
+           <img style="width: 55px; height: 60px; box-shadow: 4px 4px 8px #000000; border-style: solid; border-radius: 50%; border-color: gold;" th:src="@{/img/goldstar.png}" alt="logo" /> 
 
 
 <!--            Sam'Tay Infos  -->
