--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,13 +22,17 @@
   <h3>&Agrave; la recherche du spécialiste !</h3>
 </div>        	
 
-  <div class="" style="margin-top: 180px;">
+  <div class="" style="margin-top: 50px;">
     <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a>
   </div>	
   
-    <div class="" style="margin-top: 180px;">
-    <a th:href="@{/bar-chart}" type="button" class="btn btn-secondary">Barres graphique</a>
+    <div class="" style="margin-top: 50px;">
+    <a th:href="@{/archives-deux-sur-quatre}" type="button" class="btn btn-secondary">Archives 2sur4</a>
   </div>
+  
+<!--     <div class="" style="margin-top: 50px;"> -->
+<!--     <a th:href="@{/bar-chart}" type="button" class="btn btn-secondary">Barres graphique</a> -->
+<!--   </div> -->
 
 
 
