--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
 </div>        	
 
   <div class="" style="margin-top: 50px;">
-    <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives</a>
+    <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives Place</a>
   </div>	
   
     <div class="" style="margin-top: 50px;">
