--- a/src/main/resources/templates/place-table.html
+++ b/src/main/resources/templates/place-table.html
@@ -28,6 +28,8 @@
             <div style="border: 1px solid black;" th:text="${'Bankroll initiale: ' + initialBankrollAmount + '  -  Bankroll actuelle: ' + newBankrollAmount + '  -  Benef: ' + bankrollBenef + ' - Multiplication capital: X' + cotecapital + ' - Minimum: ' + minimumBankrollAmount}">...</div>
             <div style="border: 1px solid black;" th:text="${'Gagnés: ' + wonnumber + '  -  Perdus: ' + lostnumber}">...</div>
             <div style="border: 1px solid black;" th:text="${'Pourcentage gagnants: ' + wonpercentage + ' %'}">...</div>
+            <div style="border: 1px solid black;" th:text="${'Cote moyenne des paris gagnants: ' + cotemoyenne }">...</div>
+            
             
       
         		
