--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,7 +34,7 @@
 <!--     <a th:href="@{/bar-chart}" type="button" class="btn btn-secondary">Barres graphique</a> -->
 <!--   </div> -->
 
-
+		<div th:replace="_components :: buttonup">...</div>
 
 				<div th:replace="_nav-components :: footer">...</div>
 
