--- a/src/main/resources/templates/day-infos.html
+++ b/src/main/resources/templates/day-infos.html
@@ -53,8 +53,11 @@
 		</div>
 	</div>
 </div>
+		<div th:replace="_components :: buttonup">...</div>
 
 				<div th:replace="_nav-components :: footer">...</div>
+
+		<script type="text/javascript" th:src="@{/js/test.js}"></script>
 
 
  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
