--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -247,6 +247,9 @@ background-color: #90EE90;
 .chronoscolor{
     background-color: white;
 }
+.surfacecolor{
+    background-color: #FAECC3;
+}
 .vertfluo{
 	background-color: 	#83f52c;
 		color: white;
