--- a/src/main/resources/templates/subscription.html
+++ b/src/main/resources/templates/subscription.html
@@ -8,6 +8,9 @@
     <!--Bootstrap 4 JavaScript-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
 
     <!--Stripe JavaScript Library-->
     <script src="https://js.stripe.com/v3/"></script>
@@ -61,7 +64,9 @@
                         <label class="font-weight-medium" for="card-element">
                             Enter credit or debit card below
                         </label>
-                        <div class="w-100" id="card-element">
+<!--                         <div class="w-100" id="payment-element"> -->
+                                                <div class="w-100" id="card-element">
+                        
                             <!-- A Stripe Element will be inserted here. -->
                         </div>
                     </div>
