--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,17 +22,17 @@
   <h3>&Agrave; la recherche du spécialiste !</h3>
 </div>        	
 
-  <div class="" style="margin-top: 50px;">
-    <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives Place</a>
-  </div>	
-  
-    <div class="" style="margin-top: 50px;">
-    <a th:href="@{/archives-deux-sur-quatre}" type="button" class="btn btn-secondary">Archives 2sur4</a>
-  </div>
+<!--   <div class="" style="margin-top: 50px;"> -->
+<!--     <a th:href="@{/archives-places}" type="button" class="btn btn-secondary">Archives Place</a> -->
+<!--   </div>	 -->
   
 <!--     <div class="" style="margin-top: 50px;"> -->
-<!--     <a th:href="@{/bar-chart}" type="button" class="btn btn-secondary">Barres graphique</a> -->
+<!--     <a th:href="@{/archives-deux-sur-quatre}" type="button" class="btn btn-secondary">Archives 2sur4</a> -->
 <!--   </div> -->
+  
+    <div class="" style="margin-top: 50px;">
+    <a th:href="@{/subscription}" type="button" class="btn btn-secondary">Simulation paiement</a>
+  </div>
 
 		<div th:replace="_components :: buttonup">...</div>
 
