--- a/src/main/resources/templates/_other-components.html
+++ b/src/main/resources/templates/_other-components.html
@@ -57,6 +57,9 @@
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> P-CH-PSF-H = Places du cheval sur PSF sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> A compléter..............
+		</span><br>
+		
 		</div>
 <!-- 	</div> -->
 </div>
@@ -111,6 +114,9 @@
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge surfacecolor"> <span></span>
 		</span>
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Cheval n'ayant aucune expérience sur PSF </span>
+		</span><br>
+		
+			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> A compléter..............
 		</span><br>
 		
 		</div>
