--- a/src/main/resources/templates/_other-components.html
+++ b/src/main/resources/templates/_other-components.html
@@ -67,7 +67,7 @@
    <div th:fragment="etoiles" class="container-fluid" style="border: solid 2px black; margin: 20px;padding: 5px;">
 <!-- 	<div class="row"> -->
 		<div class="col-md-10">
-		<h5 style="text-decoration: underline;">&Eacute;toiles</h5>
+		<h5 style="text-decoration: underline;">&Eacute;toiles (Uniquement dans les courses de plat)</h5>
 				
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
 		<img th:src="@{img/redstar.png}" style="height: 18px; width: 18px;"></img>
