--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -249,13 +249,16 @@ background-color: #90EE90;
 }
 .surfacecolor{
     background-color: #FAECC3;
-    border: black solid 1px;
+    border: solid 1px black; 
 }
 .vertfluo{
 	background-color: 	#83f52c;
 		color: white;
-	
 }
+/* .badge { */
+/* 		 border: solid 1px black;  */
+	
+/* } */
 
 
 
