--- a/src/main/resources/templates/_nav-components.html
+++ b/src/main/resources/templates/_nav-components.html
@@ -65,11 +65,12 @@
         <footer>
             <div class="social"><a href="/doigt"><i class="icon ion-social-instagram"></i></a><a href="/doigt"><i class="icon ion-social-snapchat"></i></a><a href="/doigt"><i class="icon ion-social-twitter"></i></a><a href="/doigt"><i class="icon ion-social-facebook"></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="/doigt">Accueil</a></li>
-                <li class="list-inline-item"><a href="/doigt">Services</a></li>
-                <li class="list-inline-item"><a href="/doigt">A propos</a></li>
-                <li class="list-inline-item"><a href="/doigt">Termes</a></li>
-                <li class="list-inline-item"><a href="/doigt">Politique de confidentialité</a></li>
+                <li class="list-inline-item"><a href="">Accueil</a></li>
+                <li class="list-inline-item"><a href="">Services</a></li>
+                <li class="list-inline-item"><a href="">A propos</a></li>
+                <li class="list-inline-item"><a href="">Termes</a></li>
+                <li class="list-inline-item"><a href="/contact">Nous contacter</a></li>
+                <li class="list-inline-item"><a href="">Politique de confidentialité</a></li>
             </ul>
             <p class="copyright">TayInfos © 2021</p>
         </footer>
