--- a/src/main/resources/templates/_other-components.html
+++ b/src/main/resources/templates/_other-components.html
@@ -20,108 +20,280 @@
 <!-- 	<div class="row"> -->
 		<div class="col-md-10">
 		<h5 style="text-decoration: underline;">Légende</h5>
+		
+		 <span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/chronos.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> Chronos = Chronos sur la distance ou sur distance similaire
+		</span><br>
 
+        <span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-E-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-E-H = Victoires de l'entraineur sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		 <span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-J-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-J-H = Victoires du jockey sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-C-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-C-H = Victoires du cheval sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/P-C-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> P-C-H = Places du cheval sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-CO.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-CO = Victoires de l'association jockey/cheval (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/P-CO.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> P-CO = Places de l'association jockey/cheval (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-CO-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-CO-H = Victoires de l'association jockey/cheval sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/P-CO-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> P-CO-H = Places de l'association jockey/cheval sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-CH-PSF.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-CH-PSF = Victoires du cheval sur PSF (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/P-CH-PSF.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> P-CH-PSF = Places du cheval sur PSF (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/V-CH-PSF-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> V-CH-PSF-H = Victoires du cheval sur PSF sur l'hippodrome (en pourcentage)
 		</span><br>
 		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/P-CH-PSF-H.jpg}" style="height: 28px; width: 48px;"></img>
+		</span>
 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> P-CH-PSF-H = Places du cheval sur PSF sur l'hippodrome (en pourcentage)
 		</span><br>
 		
-			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> A compléter..............
+		          <hr style="height:2px;border-width:0;color:black;background-color:black" align="center">
+		
+			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> CONCLUSION : Le nombre de points donnés à chaque sélection de la conclusion correspond à la somme de tous ses pourcentages de réussite divisé par 10.
+		</span><br>
+
+                 <hr style="height:2px;border-width:0;color:black;background-color:black" align="center">
+          
+          <span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		  <img th:src="@{img/recence.jpg}" style="height: 38px; width: 48px; border: solid black 1px;"></img>
+		</span>
+			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> Les cases ayant le fond gris indiquent que le cheval n'a pas couru depuis plus de 90 jours
+		</span><br>
+		
+<!-- 			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> (Lorsque la "Conclusion" contient au moins un cheval n'ayant pas couru depuis 90 jours, un cheval supplémentaire est rajouté dans la conclusion) -->
+<!-- 		</span><br> -->
+		
+		</div>
+<!-- 	</div> -->
+</div>
+
+   <div th:fragment="etoiles-trot" class="container-fluid" style="border: solid 2px black; margin: 20px;padding: 5px;">
+<!-- 	<div class="row"> -->
+		<div class="col-md-10">
+		<h5 style="text-decoration: underline;">&Eacute;toiles (Courses de trot)</h5>
+		
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		<img th:src="@{img/redstar.png}" style="height: 18px; width: 18px;"></img>
+		</span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> : Sélection figurant dans les 5 premiers, dans au moins 6 rubriques
+		</span><br>
+				
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
+		<img th:src="@{img/greenstar.png}" style="height: 18px; width: 18px;"></img>
+		</span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> : Sélection figurant dans les 4 premiers des trois rubriques suivantes : Chronos | V-E-H (Entraineurs) | V-J-H (Jockeys)
 		</span><br>
 		
 		</div>
 <!-- 	</div> -->
 </div>
 
-   <div th:fragment="etoiles" class="container-fluid" style="border: solid 2px black; margin: 20px;padding: 5px;">
+   <div th:fragment="etoiles-plat" class="container-fluid" style="border: solid 2px black; margin: 20px;padding: 5px;">
 <!-- 	<div class="row"> -->
 		<div class="col-md-10">
-		<h5 style="text-decoration: underline;">&Eacute;toiles (Uniquement dans les courses de plat)</h5>
+		<h5 style="text-decoration: underline;">&Eacute;toiles (Courses de plat)</h5>
 				
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
 		<img th:src="@{img/redstar.png}" style="height: 18px; width: 18px;"></img>
 		</span>
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> : Cheval figurant dans les 5 premiers, dans au moins 6 rubriques (7 dans les courses sur PSF)
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> : Sélection figurant dans les 5 premiers, dans au moins 6 rubriques (7 dans les courses sur PSF)
 		</span><br>
 		
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="">
 		<img th:src="@{img/bluestar.png}" style="height: 18px; width: 18px;"></img>
 		</span>
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> : Cheval figurant dans les 3 premiers des rubriques "V-E-H" (Entraineurs)) et "V-J-H" (Jockeys)
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> : Sélection figurant dans les 3 premiers des rubriques "V-E-H" (Entraineurs)) et "V-J-H" (Jockeys)
 		</span>
 		
 		</div>
 <!-- 	</div> -->
 </div>
 
+   <div th:fragment="pastilles-trot" class="container-fluid" style="border: solid 2px black; margin: 20px;padding: 5px;">
+  
+  		<div class="col-md-10">
+		<h5 style="text-decoration: underline;">Pastilles (Courses de trot uniquement)</h5>
+		
+	    <span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge chronoscolor"> <span></span>
+		</span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Sélection ne figurant pas dans la rubrique "Chronos"</span>
+		</span><br>
+			
+		<h3>A modifier...</h3>
+			
+		</div>
+		
+   </div>
 
    <div th:fragment="pastilles" class="container-fluid" style="border: solid 2px black; margin: 20px;padding: 5px;">
   
   		<div class="col-md-10">
 		<h5 style="text-decoration: underline;">Pastilles</h5>
-		
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge entcolor"> <span></span>
-		</span>
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Cheval ne figurant pas dans la rubrique "V-E-H" (Entraineurs)</span>
-		</span><br>
-		
+				
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge jockcolor"> <span></span>
 		</span>
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Cheval ne figurant pas dans la rubrique "J-E-H" (Jockeys)</span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Sélection ne figurant pas dans les 7 premiers de la rubrique "V-J-H" (Jockeys)</span>
 		</span><br>
-		
-<!-- 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge chronoscolor"> <span></span> -->
-<!-- 		</span> -->
-<!-- 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Cheval ne figurant pas dans la rubrique "Chronos"</span> -->
-<!-- 		</span><br> -->
-
+	
 	    <span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge couplecolor"> <span></span>
 		</span>
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Cheval n'ayant aucune expérience avec le jockey du jour </span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Sélection n'ayant aucune expérience avec le jockey du jour </span>
 		</span><br>
 		
 		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge surfacecolor"> <span></span>
 		</span>
-		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Cheval n'ayant aucune expérience sur PSF </span>
+		<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> <span>  : Sélection n'ayant aucune expérience sur PSF </span>
 		</span><br>
 		
-			<span style="border-radius: 100%; height: 10px; width: 10px; margin-right: 3px;" class="badge"> A compléter..............
-		</span><br>
-		
+		<h3>A modifier...</h3>
+			
 		</div>
 		
  </div>
+ 
+ 
+ 	<div th:fragment="gainsSG" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('simplegagnant')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Simples-gagnants du jour R[[${reunionstring}]]</h5>
+  <p th:each="sg : ${bonscoupsdujour.get('simplegagnant')}"><strong>[[${sg}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+   
+       	<div th:fragment="gainsCOUPLEGAGNANT" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('couplegagnant')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Couplés-gagnants du jour R[[${reunionstring}]]</h5>
+  <p th:each="cg : ${bonscoupsdujour.get('couplegagnant')}"><strong>[[${cg}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+          	<div th:fragment="gainsCOUPLEORDRE" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('coupleordre')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Couplés-ordre du jour R[[${reunionstring}]]</h5>
+  <p th:each="cg : ${bonscoupsdujour.get('coupleordre')}"><strong>[[${cg}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+    	<div th:fragment="gainsTRIO" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('trio')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Trios du jour R[[${reunionstring}]]</h5>
+  <p th:each="t : ${bonscoupsdujour.get('trio')}"><strong>[[${t}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+      	<div th:fragment="gainsTRIOORDRE" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('trioordre')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Trios-ordre du jour R[[${reunionstring}]]</h5>
+  <p th:each="t : ${bonscoupsdujour.get('trioordre')}"><strong>[[${t}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+      	<div th:fragment="gainsMULTI" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('multi')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Multis du jour R[[${reunionstring}]]</h5>
+  <p th:each="m : ${bonscoupsdujour.get('multi')}"><strong>[[${m}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+        	<div th:fragment="gainsPICK5" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('pick5')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Pick5 du jour R[[${reunionstring}]]</h5>
+  <p th:each="p : ${bonscoupsdujour.get('pick5')}"><strong>[[${p}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+         	<div th:fragment="gainsQUINTE" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('quinte')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Quinté du jour R[[${reunionstring}]]</h5>
+  <p th:each="q : ${bonscoupsdujour.get('quinte')}"><strong>[[${q}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+           	<div th:fragment="gainsQUARTE" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('quarte')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Quarté du jour R[[${reunionstring}]]</h5>
+  <p th:each="q : ${bonscoupsdujour.get('quarte')}"><strong>[[${q}]]</strong></p>
+</div> 
+	</div>
+   </div>
+   
+           	<div th:fragment="gainsTIERCE" class="row">
+			<div class="col-md-8">
+		<div th:if="${#lists.size(bonscoupsdujour.get('tierce')) gt 0}" class="" style="width:100%; border: 3px solid red; padding: 10px; margin-bottom: 5px; background-color: white;">
+<h5 style="border-bottom: 1px solid black; padding-bottom: 2px;">Tiercé du jour R[[${reunionstring}]]</h5>
+  <p th:each="q : ${bonscoupsdujour.get('tierce')}"><strong>[[${q}]]</strong></p>
+</div> 
+	</div>
+   </div>
 		
   
 	<script src="https://unpkg.com/feather-icons"></script>
