--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -227,6 +227,14 @@ background-color: #90EE90;
 	text-align: right;
 }
 
+.returnline{
+  word-wrap: break-word;
+/*   -webkit-hyphens: auto; */
+/*   -moz-hyphens: auto; */
+/*   -ms-hyphens: auto; */
+/*   hyphens: auto; */
+}
+
 
 /*                           COLORS */
 /* ////////////////////////////////////////////////////////////// */
@@ -245,15 +253,24 @@ background-color: #90EE90;
 	background-color: #FFB6C1;
 }
 .chronoscolor{
-    background-color: white;
+    background-color: #83f52c;
+    		color: black;
+    
 }
 .surfacecolor{
     background-color: #FAECC3;
     border: solid 1px black; 
 }
+.psfcolor{
+    background-color: #FAECC3;
+}
 .vertfluo{
 	background-color: 	#83f52c;
 		color: white;
+}
+.whitecolor{
+	background-color: white;
+		color: black;
 }
 /* .badge { */
 /* 		 border: solid 1px black;  */
