--- a/src/main/resources/templates/_components.html
+++ b/src/main/resources/templates/_components.html
@@ -2754,6 +2754,112 @@
 
               <!--//Twelvth Collapse TAYPRONO END -->
               
+              
+              
+              
+              
+<!--               <div th:fragment="chronos-dropdownsone(racehorses)" class="collapse dropdownborder" id="collapseExample1"> -->
+
+<!--  <form th:action="@{set-bon-coups}" method="POST"> -->
+ 
+<!--  <h1 style="margin-bottom: 10px;">Chronos/valeurs</h1> -->
+ 
+<!--   <div class="form-group col-md-4"> -->
+<!--       <label for="">1er</label> -->
+<!--       <select class="form-control" name="one"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--      <div class="form-group col-md-4"> -->
+<!--       <label for="">2&egrave;me</label> -->
+<!--       <select class="form-control" name="two"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--       <div class="form-group col-md-4"> -->
+<!--       <label for="">3&egrave;me</label> -->
+<!--       <select  class="form-control" name="three"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--       <div class="form-group col-md-4"> -->
+<!--       <label for="">4&egrave;me</label> -->
+<!--       <select  class="form-control" name="four"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--       <div class="form-group col-md-4"> -->
+<!--       <label for="">5&egrave;me</label> -->
+<!--       <select  class="form-control" name="five"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--       <div class="form-group col-md-4"> -->
+<!--       <label for="">6&egrave;me</label> -->
+<!--       <select  class="form-control" name="six"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--       <div class="form-group col-md-4"> -->
+<!--       <label for="">7&egrave;me</label> -->
+<!--       <select  class="form-control" name="seven"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--       <div class="form-group col-md-4"> -->
+<!--       <label for="">8&egrave;me</label> -->
+<!--       <select  class="form-control" name="eight"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+    
+<!--      <div class="form-group col-md-4"> -->
+<!--       <label for="">9&egrave;me</label> -->
+<!--       <select  class="form-control" name="nine"> -->
+<!--         <option value="">Choisir...</option> -->
+<!--            <option th:each="horse : ${racehorses}" th:value="${horse.id}" -->
+<!-- 		      th:text="${horse.numero}"> -->
+<!-- 		   </option>       -->
+<!--      </select> -->
+<!--     </div> -->
+
+<!--       <button type="submit" class="btn btn-primary text-dark">Envoyer</button> -->
+<!--  </form> -->
+
+<!-- </div> -->
+              
+              
  
   
 	<script src="https://unpkg.com/feather-icons"></script>
