--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,10 +33,19 @@
     <div class="" style="margin-top: 50px;">
     <a th:href="@{/subscription}" type="button" class="btn btn-secondary">Simulation paiement</a>
   </div>
+  
+    <div class="" style="margin-top: 50px;">
+    <a th:href="@{/test-email}" type="button" class="btn btn-secondary">Test envoi email</a>
+  </div>
 
 		<div th:replace="_components :: buttonup">...</div>
 
 				<div th:replace="_nav-components :: footer">...</div>
+				
+				
+				
+
+	<script src="https://unpkg.com/feather-icons"></script>
 
 	<script type="text/javascript" th:src="@{/js/test.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
