--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -99,6 +99,52 @@
 <br>
 
 
+<div class="container-fluid" style="margin-top: 20px;">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-4">
+				</div>
+				<div class="col-md-4" style=" border: 1px solid black; padding: 15px;">
+				<h3>Importer données (période)</h3>
+				<br>
+				
+				
+				<form method="POST" th:action="@{/upload-data-date-range}" enctype="multipart/form-data">
+    <div class="form-group mt-3">
+        <label style="font-weight: bold;" for="url">Date de début</label>
+        <input type="date" name="datedebut" class="form-control-file" id="">
+        
+                <label style="font-weight: bold;" for="url">Date de fin</label>
+                <input type="date" name="datefin" class="form-control-file" id="">
+        
+<!--         <input type="text" name="url" class="form-control-file" id="url"> -->
+
+    </div>
+<!--     <button type="submit" class="btn btn-primary">Envoyer</button> -->
+ <button onclick="spinnerFunction3()" class="btn btn-primary" type="submit">
+  <span id="mySpinner3" class="" role="status" aria-hidden="true"></span>
+  <span id="myTextToHide3">Importer</span>
+    <span id="myTextToShow3" style="display: none">Importation en cours...</span>
+</button>
+                       
+</form>
+
+<!-- <div th:if="${messagesuccess}" th:text="${messagesuccess}" class="alert alert-success" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageerror}" th:text="${messageerror}" class="alert alert-danger" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageempty}" th:text="${messageempty}" class="alert alert-warning" role="alert"> -->
+<!-- </div> -->
+
+				</div>
+				<div class="col-md-4">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 
 <!-- <div class="container-fluid"> -->
 <!-- 	<div class="row"> -->
@@ -170,6 +216,96 @@
 		</div>
 	</div>
 </div>
+<br>
+
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-4">
+				</div>
+				<div class="col-md-4" style=" border: 1px solid black; padding: 15px;">
+								<h3>Importer rapports (période)</h3>
+				<br>
+				
+				<form method="POST" th:action="@{/upload-rapports-date-range}" enctype="">
+    <div class="form-group mt-3">
+        <label style="font-weight: bold;" for="url">Date de début</label>
+<!--         <input type="file" name="file" class="form-control-file" id="file" accept="*.json"> -->
+        <input type="date" name="datedebut" class="form-control-file" id="">
+                <label style="font-weight: bold;" for="url">Date de fin</label>
+                <input type="date" name="datefin" class="form-control-file" id="">
+        
+
+    </div>
+<!--     <button type="submit" class="btn btn-primary">Envoyer</button> -->
+ <button onclick="spinnerFunction5()" class="btn btn-primary" type="submit">
+  <span id="mySpinner5" class="" role="status" aria-hidden="true"></span>
+  <span id="myTextToHide5">Importer</span>
+    <span id="myTextToShow5" style="display: none">Importation en cours...</span>
+</button>
+                       
+</form>
+
+<!-- <div th:if="${messagesuccess}" th:text="${messagesuccess}" class="alert alert-success" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageerror}" th:text="${messageerror}" class="alert alert-danger" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageempty}" th:text="${messageempty}" class="alert alert-warning" role="alert"> -->
+<!-- </div> -->
+
+				</div>
+				<div class="col-md-4">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
+
+
+
+<div class="container-fluid" style="margin-top: 120px;">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="row">
+				<div class="col-md-4">
+				</div>
+				<div class="col-md-4" style=" border: 1px solid black; padding: 15px;">
+				
+				<form method="POST" th:action="@{/update-paris-turf-id}" enctype="multipart/form-data">
+    <div class="form-group mt-3">
+        <label style="font-weight: bold;" for="url">Modifier ID Paris Turf</label>
+      
+        <input type="text" name="paristurfid" class="form-control-file" id="">
+<!--         <input type="text" name="url" class="form-control-file" id="url"> -->
+
+    </div>
+<!--     <button type="submit" class="btn btn-primary">Envoyer</button> -->
+ <button class="btn btn-primary" type="submit">Modifier
+<!--   <span id="mySpinner2" class="" role="status" aria-hidden="true"></span> -->
+<!--   <span id="myTextToHide2">Importer</span> -->
+<!--     <span id="myTextToShow2" style="display: none">Importation en cours...</span> -->
+</button>
+                       
+</form>
+
+<!-- <div th:if="${messagesuccess}" th:text="${messagesuccess}" class="alert alert-success" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageerror}" th:text="${messageerror}" class="alert alert-danger" role="alert"> -->
+<!-- </div> -->
+<!-- <div th:if="${messageempty}" th:text="${messageempty}" class="alert alert-warning" role="alert"> -->
+<!-- </div> -->
+
+				</div>
+				<div class="col-md-4">
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 
 
 
